add: OAuth authorization

--- a/yandexdisk/templates/disk/home.html
+++ b/yandexdisk/templates/disk/home.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav ms-auto">
                   <li class="nav-item">
-                     <a class="nav-link" href="{% url 'auth_url' %}">Авторизация</a>
+                     <a class="nav-link" href="{% url 'auth' %}">Авторизация</a>
                   </li>
                </ul>
             </div>
