--- a/yandexdisk/templates/disk/home.html
+++ b/yandexdisk/templates/disk/home.html
@@ -115,7 +115,7 @@
                            </li>
                            {% endfor %}
                         </ul>
-                        <button type="submit" class="btn btn-success">Скачать выбранные файлы</button>
+                        <button type="submit" class="btn btn-success" id="downloadButton">Скачать выбранные файлы</button>
                      </div>
                   </div>
                </form>
@@ -131,6 +131,23 @@
          </div>
          {% endif %}
       </div>
+      <script>
+         document.addEventListener('DOMContentLoaded', function() {
+             const checkboxes = document.querySelectorAll('input[type="checkbox"]');
+             const downloadButton = document.getElementById('downloadButton');
+
+             function toggleDownloadButton() {
+                 const anyChecked = Array.from(checkboxes).some(checkbox => checkbox.checked);
+                 downloadButton.disabled = !anyChecked;
+             }
+
+             checkboxes.forEach(checkbox => {
+                 checkbox.addEventListener('change', toggleDownloadButton);
+             });
+
+             toggleDownloadButton();
+         });
+      </script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
    </body>
 </html>
